@@ -1,3 +1,10 @@
+2000-08-04  Dan Winship  <danw@helixcode.com>
+
+	* mail-threads.c (mail_operation_wait_for_finish): Don't use
+	"while (gtk_events_pending ()) gtk_main_iteration ();" inside
+	another tight loop, because it makes the thread spin rather than
+	blocking and waiting like it should.
+
 2000-08-04  Peter Williams  <peterw@helixcode.com>
 
 	* message-thread.c (do_thread_messages): Uninitialized variable
